Adjusting the letter spacing of the site title to fix alignment with subtitle per issue #3

--- a/web/assets/scss/components/_header.scss
+++ b/web/assets/scss/components/_header.scss
@@ -112,6 +112,8 @@ body {
     @include h3;
     margin-bottom: 0;
     display: inline-block;
+    // Manual letter-spacing to align to subtitle
+    letter-spacing: .024em;
 
     a {
       color: color(white);
